--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ langsmith==0.0.65
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
+matplotlib
 mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.4
